src/mermaid/ascii/architecture/snapshots/veol__mermaid__ascii__architecture__render__tests__render_architecture_minimal.snap
---
source: src/mermaid/ascii/architecture/render.rs
assertion_line: 461
expression: render_src(src)
---

 ┌───────────┐
 │D Database │
 │           │
 └───────────┘
