src/mermaid/ascii/architecture/snapshots/veol__mermaid__ascii__architecture__render__tests__render_ascii_charset.snap
---
source: src/mermaid/ascii/architecture/render.rs
assertion_line: 497
expression: render_src_ascii(src)
---

 +------- [C] API ---------+
 |                         |
 | +--------+  +---------+ |
 | |[DB] DB |  |[S] Ser… | |
 | |        |  |         | |
 | +--------+  +---------+ |
 |                         |
 +-------------------------+
