src/mermaid/ascii/architecture/snapshots/veol__mermaid__ascii__architecture__render__tests__render_edge_between_services.snap
---
source: src/mermaid/ascii/architecture/render.rs
assertion_line: 485
expression: render_src(src)
---

 ┌──────── * API ──────────┐
 │                         │
 │ ┌────────┐  ┌─────────┐ │
 │ │ D DB   │──│S Server │ │
 │ │        │  │         │ │
 │ └────────┘  └─────────┘ │
 │                         │
 └─────────────────────────┘
