src/mermaid/ascii/architecture/snapshots/veol__mermaid__ascii__architecture__render__tests__render_group_with_services.snap
---
source: src/mermaid/ascii/architecture/render.rs
assertion_line: 467
expression: render_src(src)
---

 ┌──────── * API ──────────┐
 │                         │
 │ ┌────────┐  ┌─────────┐ │
 │ │ D DB   │  │S Server │ │
 │ │        │  │         │ │
 │ └────────┘  └─────────┘ │
 │                         │
 └─────────────────────────┘
