src/mermaid/ascii/architecture/snapshots/veol__mermaid__ascii__architecture__render__tests__render_nested_groups.snap
---
source: src/mermaid/ascii/architecture/render.rs
assertion_line: 479
expression: render_src(src)
---

 ┌─── * Outer ────┐
 │                │
 │ ┌─ * Inner ──┐ │
 │ │            │ │
 │ │ ┌────────┐ │ │
 │ │ │ D DB   │ │ │
 │ │ │        │ │ │
 │ │ └────────┘ │ │
 │ │            │ │
 │ └────────────┘ │
 │                │
 └────────────────┘
