src/mermaid/ascii/architecture/snapshots/veol__mermaid__ascii__architecture__render__tests__render_two_groups.snap
---
source: src/mermaid/ascii/architecture/render.rs
assertion_line: 473
expression: render_src(src)
---

 ┌── * API ───┐
 │            │
 │ ┌────────┐ │
 │ │ D DB   │ │
 │ │        │ │
 │ └────────┘ │
 │            │
 └────────────┘

 ┌─ * External ──┐
 │               │
 │ ┌────────┐    │
 │ │ @ Net  │    │
 │ │        │    │
 │ └────────┘    │
 │               │
 └───────────────┘
