src/mermaid/ascii/architecture/snapshots/veol__mermaid__ascii__architecture__render__tests__render_with_junction.snap
---
source: src/mermaid/ascii/architecture/render.rs
assertion_line: 491
expression: render_src(src)
---

 ┌────────┐      ┌────────┐
 │  S A   │──┼ ──│  S B   │
 │        │      │        │
 └────────┘      └────────┘
